# music_bot

./: MakerFile  README.md  docker-compose.override.yml  docker-compose.yml  pyproject.toml  requirements.txt
app/bot/: main.py
app/bot/handlers/: admin.py  inline.py  playlist.py  premium.py  profile.py  search.py  start.py
app/bot/keyboards/: __init__.py  builders.py  inline.py  reply.py
app/bot/middlewares/: __init__.py  auth.py  logging.py  subscription.py  throttling.py
app/core/: __init__.py  config.py  database.py  exceptions.py  logging.py  redis.py  security.py
app/models/: __init__.py  analytics.py  base.py  playlist.py  search.py  subscription.py  track.py  user.py
app/schemas/: __init__.py  payment.py  playlist.py  search.py  track.py  user.py
app/services/: __init__.py  analytics_service.py  cache_service.py  payment_service.py  playlist_service.py  search_service.py  user_service.py
app/services/music/: __init__.py  aggregator.py  base.py  spotify.py  vk_audio.py  youtube.py
docker/: Dockerfile.api  Dockerfile.bot  Dockerfile.worker
migrations/: alembic.ini  env.py
scripts/: backup.py  init_db.py  migrate.py  monitor.py
